--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
 <body>
 
   <div class="overflow-effect">
-
+  
   </div>
-
+  
   <header class="navbar">
     <picture class="navbar__logo-box">
       <img class="navbar__logo" src="assets/images/logo.svg" alt="Logo W">
     </picture>
-
     <nav>
-      <img src="assets/images/icon-menu-close.svg" alt="close menu" class="navbar__close">
+      <button>
+        <img src="assets/images/icon-menu-close.svg" alt="close menu" class="navbar__close">
+      </button>
       <ul class="navbar__list">
         <li class="navbar__list__item"><a href="#home" class="navabar__list__item__link">Home</a></li>
         <li class="navbar__list__item"><a href="#news" class="navabar__list__item__link">New</a></li>
@@ -36,14 +37,10 @@
         <li class="navbar__list__item"><a href="#" class="navabar__list__item__link">Categories</a></li>
       </ul>
     </nav>
-
-    <picture class="navbar__icon-menu">
+    <button class="navbar__icon-menu">
       <img src="assets/images/icon-menu.svg" alt="open menu">
-    </picture>
-
+    </button>
   </header>
-
-
 
   <main class="main-article" id="home">
     <picture class="main-article__img-box">
