--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <body>
 
   <div class="overflow-effect">
-  
+
   </div>
-  
+
   <header class="navbar">
     <picture class="navbar__logo-box">
       <img class="navbar__logo" src="assets/images/logo.svg" alt="Logo W">
     </picture>
     <nav>
-      <button>
+      <button class="navbar__close-box">
         <img src="assets/images/icon-menu-close.svg" alt="close menu" class="navbar__close">
       </button>
       <ul class="navbar__list">
@@ -102,7 +102,6 @@
         </p>
       </div>
     </div>
-
     <div class="popular__article">
       <figure class="popular__article__img">
         <img src="assets/images/image-top-laptops.jpg" alt="Laptop's keyboard">
@@ -119,7 +118,6 @@
         </p>
       </div>
     </div>
-
     <div class="popular__article">
       <figure class="popular__article__img">
         <img src="assets/images/image-gaming-growth.jpg" alt="PS5 Joypad">
@@ -147,6 +145,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="script.js"></script>
+  
 </body>
 
 </html>
